--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         
         <div class="row">
-            <input style="width:100%;min-height:40px;background-color:#aaaaaa;overflow-x:hidden ;border:1px solid black;border-radius:5px;" id="input" readonly>
+            <input style="width:100%;min-height:40px;background-color:#aaaaaa;overflow:hidden ;border:1px solid black;border-radius:5px;" id="input" readonly>
         </div>
         <div class="row">
             <div class="column first">
